# mizuki

./: Cargo.toml  LICENSE  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json
.changes/: config.json
.github/workflows/: audit-javascript.yml  audit-rust.yml  covector-status.yml  covector-version-or-publish.yml  format-javascript.yml  format-rust.yml  lint-javascript.yml  lint-rust.yml  test.yml
.scripts/: checkIfPublished.js
crates/mizuki/: Cargo.toml
crates/mizuki-build/: Cargo.toml
crates/mizuki-build/src/: lib.rs
crates/mizuki/src/: lib.rs  plugin.rs  subscription.rs
crates/mizuki/src/plugin/: builder.rs
examples/graphiql-test/: myschema.graphqls  package.json  vite.config.ts
examples/graphiql-test/src/: App.module.css  App.tsx
examples/graphiql-test/src-tauri/: Cargo.toml  tauri.conf.json
examples/graphiql-test/src-tauri/capabilities/: default.json
examples/graphiql-test/src-tauri/src/: lib.rs  main.rs
examples/min-x/: package.json  vite.config.ts
examples/min-x/src-tauri/: Cargo.toml  tauri.conf.json
examples/min-x/src-tauri/src/: main.rs
examples/preact-app/: codegen.ts  myschema.graphqls  package.json  tsconfig.json
examples/preact-app/plugin/mizuki-test/: Cargo.toml
examples/preact-app/plugin/mizuki-test/permissions/autogenerated/: reference.md
examples/preact-app/plugin/mizuki-test/src/: lib.rs
examples/preact-app/src/: app.tsx  main.tsx
examples/preact-app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
examples/preact-app/src-tauri/capabilities/: default.json
examples/preact-app/src-tauri/src/: main.rs
examples/preact-app/src/components/: TestMutationSubs.tsx  TestQuery.tsx  TestQueryQueryError.tsx  TestSubscription.tsx
examples/preact-app/src/gql/: fragment-masking.ts  gql.ts  graphql.ts
examples/svelte-apollo-app/: codegen.ts  myschema.graphqls  package.json  svelte.config.js  vite.config.ts
examples/svelte-apollo-app/plugin/mizuki-test/: Cargo.toml
examples/svelte-apollo-app/plugin/mizuki-test/permissions/autogenerated/: reference.md
examples/svelte-apollo-app/plugin/mizuki-test/src/: lib.rs
examples/svelte-apollo-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-apollo-app/src-tauri/src/: lib.rs  main.rs
examples/svelte-apollo-app/src/lib/: gql.client.ts
examples/svelte-apollo-app/src/lib/gql/: gql.ts  graphql.ts
examples/svelte-apollo-app/src/routes/: +page.svelte  Sub.svelte  Subscription.svelte  subscription.ts
src/: cancel_token.rs  lib.rs  plugin.rs  query.rs  subscription.rs  traits.rs
src/plugin/: builder.rs
