[workspace]
members = [
    "crates/*",
    "examples/*/src-tauri",
    "examples/preact-app/plugin/mizuki-test",
    "examples/svelte-apollo-app/plugin/mizuki-test",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1" }
serde_json = "1"
tauri = { version = "2", default-features = false }
async-graphql = "7"
tauri-build = "2"
tauri-plugin = "2"
mizuki = { path = "./crates/mizuki" }
mizuki-build = { path = "./crates/mizuki-build" }
