[package]
name = "mizuki"
version = "1.0.2"
authors = ["Jonas Kruckenberg", "tonymushah <tonymushahDev06@yahoo.com>"]
description = "A toolkit for building Tauri Plugins that enables type-safe IPC through GraphQL."
edition = "2021"
rust-version = "1.77.2"
exclude = ["/webview-dist", "/webview-src", "node_modules", "/packages"]
license = "MIT"
repository = "https://github.com/tonymushah/mizuki"
categories = ["gui", "web-programming"]
keywords = ["tauri-plugin", "graphql"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tauri = { workspace = true, default-features = false }
async-graphql.workspace = true
tokio-util = "0"
tokio = { version = "1", features = ["macros"] }
thiserror = "2"

[dev-dependencies]
rand = "0.8.5"
tauri = { workspace = true }
