[package]
name = "graphiql-test"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "graphiql_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = [] }
tauri-plugin-opener = "2"
mizuki-test-apollo = { path = "../../svelte-apollo-app/plugin/mizuki-test" }
