[package]
name = "mizuki-test"
version = "0.1.0"
edition = "2021"
links = "mizuki-test"

[build-dependencies]
mizuki-build = {workspace = true}

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tauri = { workspace = true, features = [] }
mizuki = { path = "../../../.." }
async-graphql.workspace = true
tokio = "1"